objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promise_Date__c</fullName>
        <label>Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Promise_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Promise_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Purchase Orders</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>